--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -17,16 +17,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(134, 90, 85);
+
   &-form {
     display: flex;
     flex-direction: column;
-    background-color: red($color: #000000);
+    background: red($color: #fd0a0a) !important;
     padding: 20px;
     margin: 100px;
+    opacity: 1;
   }
 }
 .modal {
   opacity: 0;
   background: rgba(0, 0, 0, 0.315);
+  transition: 2s all ease-in-out;
+}
+.red {
+  background: red;
 }
