--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 40px;
+  // height: 40px;
   //   .logo {
   //   }
   &-links {
