--- a/src/style/_nav.scss
+++ b/src/style/_nav.scss
@@ -1,10 +1,11 @@
 #nav ul {
 	list-style:none;
 	margin:0;
-	padding:0;
+    padding:0;
+    display: flex;
 }
 #nav ul li {
-	float:left;
+	// float:left;
 }
 #nav ul li a {
 	display:block;
