--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,3 +1,4 @@
-@import 'main';
-@import 'modal';
-@import 'loginscreen';
+@import "main";
+@import "modal";
+@import "loginscreen";
+@import "frame";
