--- a/src/style/_frame.scss
+++ b/src/style/_frame.scss
@@ -1,7 +1,40 @@
 .frame {
   max-width: 750px;
   margin: 20px auto;
-  height: 400px;
   position: relative;
   border: 2px solid grey;
+  padding: 20px;
+}
+.weather-wrapper p{
+  margin: 0 0 5px;
+}
+.weather-wrapper .city {
+    text-transform: uppercase;
+    color: grey;
+    font-weight: 600;
+    font-size: 16px;
+}
+.capitalize {
+  text-transform: capitalize;
+}
+.weather-data {
+  display: flex;
+  margin-top: 15px;
+}
+.img-temp {
+    display: flex;
+    align-items: center;
+    width: 50%;
+}
+.img-temp img {
+    width: 75px;
+    height: 75px;
+}
+.img-temp p {
+    font-size: 40px;
+    font-weight: 600;
+    margin-left: 25px;
+}
+.more-weather-details p:first-child {
+  margin: 0;
 }
