--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -13,3 +13,11 @@
     background: rgb(243, 131, 131);
   }
 }
+.like-place {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+}
+// .location-img {
+//   width: 300px;
+// }
