--- a/src/style/_frame.scss
+++ b/src/style/_frame.scss
@@ -4,15 +4,16 @@
   position: relative;
   border: 2px solid grey;
   padding: 20px;
+  min-height: 400px;
 }
-.weather-wrapper p{
+.weather-wrapper p {
   margin: 0 0 5px;
 }
 .weather-wrapper .city {
-    text-transform: uppercase;
-    color: grey;
-    font-weight: 600;
-    font-size: 16px;
+  text-transform: uppercase;
+  color: grey;
+  font-weight: 600;
+  font-size: 16px;
 }
 .capitalize {
   text-transform: capitalize;
@@ -22,18 +23,18 @@
   margin-top: 15px;
 }
 .img-temp {
-    display: flex;
-    align-items: center;
-    width: 50%;
+  display: flex;
+  align-items: center;
+  width: 50%;
 }
 .img-temp img {
-    width: 75px;
-    height: 75px;
+  width: 75px;
+  height: 75px;
 }
 .img-temp p {
-    font-size: 40px;
-    font-weight: 600;
-    margin-left: 25px;
+  font-size: 40px;
+  font-weight: 600;
+  margin-left: 25px;
 }
 .more-weather-details p:first-child {
   margin: 0;
