--- a/src/style/_modal.scss
+++ b/src/style/_modal.scss
@@ -23,6 +23,7 @@
   margin: 20px auto;
   width: 50%;
   animation: openModal 2s;
+  text-align: justify;
 }
 .modal-header,
 .modal-footer {
@@ -35,12 +36,11 @@
 }
 #close {
   cursor: pointer;
-  border: 1px solid #fff;
-  border-radius: 50%;
+
   padding: 5px;
 }
 #close:hover {
-  background-color: #4da6ff;
+  color: #4da6ff;
 }
 .modal-body {
   padding: 1px 10px;
