font and images

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,7 +1,6 @@
-
-@import 'nav';
+@import "nav";
 @import "main";
 @import "modal";
 @import "loginscreen";
 @import "frame";
-
+@import url("//fonts.googleapis.com/css?family=Courgette");
