--- a/src/style/_modal.scss
+++ b/src/style/_modal.scss
@@ -21,8 +21,8 @@
 }
 
 .modal-content {
-  margin: 20px auto;
-  width: 50%;
+  margin: 20px auto 40px;
+  width: 80%;
   animation: openModal 2s;
   text-align: justify;
 }
@@ -30,8 +30,13 @@
 .modal-footer {
   padding: 10px;
   color: #e91e63ff;
-
   text-align: center;
+}
+.text {
+  font-family: "Courgette", sans-serif;
+  font-size: 20px;
+  font-weight: 900;
+  padding: 0 20px;
 }
 #close {
   cursor: pointer;
@@ -48,6 +53,7 @@
 }
 .modal-footer {
   padding: 7px;
+  margin-top: 20px;
 }
 
 @keyframes openModal {
@@ -58,7 +64,7 @@
     opacity: 1;
   }
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1140px) {
   .modal-content {
     width: 95%;
   }
