--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -3,4 +3,19 @@
 @import "modal";
 @import "loginscreen";
 @import "frame";
-@import url("//fonts.googleapis.com/css?family=Courgette");
+@import url("//fonts.googleapis.com/css?family=Domine");
+@import url("https://fonts.googleapis.com/css?family=Muli&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,500&display=swap");
+* {
+  box-sizing: border-box;
+}
+
+body {
+  // background-color: #ffb84d;
+  font-family: "Open Sans", sans-serif;
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
+  // min-height: 100vh;
+  margin: 0;
+}
