--- a/src/style/_loginscreen.scss
+++ b/src/style/_loginscreen.scss
@@ -1,127 +1,109 @@
-@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,500&display=swap');
-
-* {
-	box-sizing: border-box;
-}
-
-body {
-	// background-color: #ffb84d;
-	font-family: 'Open Sans', sans-serif;
-	// display: flex;
-	// align-items: center;
-	// justify-content: center;
-	// min-height: 100vh;
-	margin: 0;
-}
-
-.container {
-	background-color: #ececeb;
-	border-radius: 5px;
-	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-	overflow: hidden;
-	width: 400px;
-	max-width: 100%;
-	margin: 30px auto;
+#login-container {
+  background-color: #ececeb;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  //   overflow: hidden;
+  width: 400px;
+  max-width: 100%;
+  margin: 30px auto;
 }
 
 .header {
-	border-bottom: 1px solid #f0f0f0;
-	background-color: #f7f7f7;
-	padding: 20px 40px;
+  border-bottom: 1px solid #f0f0f0;
+  background-color: #f7f7f7;
+  padding: 20px 40px;
 }
 
 .header h2 {
-	margin: 0;
+  margin: 0;
 }
 
 .form {
-	padding: 30px 40px;	
+  padding: 30px 40px;
 }
 
 .form-control {
-	margin-bottom: 10px;
-	padding-bottom: 20px;
-	position: relative;
+  margin-bottom: 10px;
+  padding-bottom: 20px;
+  position: relative;
 }
 
 .form-control label {
-	display: inline-block;
-	margin-bottom: 5px;
+  display: inline-block;
+  margin-bottom: 5px;
 }
 
 .form-control input {
-	border: 2px solid #f0f0f0;
-	border-radius: 4px;
-	display: block;
-	font-family: inherit;
-	font-size: 14px;
-	padding: 10px;
-	width: 100%;
+  border: 2px solid #f0f0f0;
+  border-radius: 4px;
+  display: block;
+  font-family: inherit;
+  font-size: 14px;
+  padding: 10px;
+  width: 100%;
 }
 
 .form-control input:focus {
-	outline: 0;
-	border-color: #777;
+  outline: 0;
+  border-color: #777;
 }
 /*Ovaj selektor trazi sve input elemente koji se nalaze unutar elementa koji ima klasu form-control i koji takodje ima i klasu success */
 
-
 .form-control.error input {
-	border-color: #e74c3c;
+  border-color: #e74c3c;
 }
 
 .form-control.success input {
-	border-color: #2ecc71;
+  border-color: #2ecc71;
 }
 
 .form-control i {
-	visibility: hidden;
-	position: absolute;
-	top: 40px;
-	right: 10px;
+  visibility: hidden;
+  position: absolute;
+  top: 40px;
+  right: 10px;
 }
 
 .form-control.success i.fa-check-circle {
-	color: #2ecc71;
-	visibility: visible;
+  color: #2ecc71;
+  visibility: visible;
 }
 
 .form-control.error i.fa-exclamation-circle {
-	color: #e74c3c;
-	visibility: visible;
+  color: #e74c3c;
+  visibility: visible;
 }
 
 .form-control small {
-	color: #e74c3c;
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	visibility: hidden;
+  color: #e74c3c;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  visibility: hidden;
 }
 
 .form-control.error small {
-	visibility: visible;
+  visibility: visible;
 }
 
-.form [type='submit'] {
-	background-color: #ff9900;
-	border: 2px solid #b36b00;
-	border-radius: 4px;
-	color: #fff;
-	display: block;
-	font-family: inherit;
-	font-size: 16px;
-	padding: 10px;
-	margin-top: 20px;
-	width: 100%;
+.form [type="submit"] {
+  background-color: #ff9900;
+  border: 2px solid #b36b00;
+  border-radius: 4px;
+  color: #fff;
+  display: block;
+  font-family: inherit;
+  font-size: 16px;
+  padding: 10px;
+  margin-top: 20px;
+  width: 100%;
 }
 .snaga-sifre {
-	height: 10px;
-    background: grey;
-    margin-top: 10px;
+  height: 10px;
+  background: grey;
+  margin-top: 10px;
 }
 
 #text {
-	display: none;
+  display: none;
 }
