--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -3,6 +3,7 @@
 @import "todos";
 @import "main";
 @import "modal";
+@import "folderTree";
 @import "loginscreen";
 @import "frame";
 @import url("//fonts.googleapis.com/css?family=Domine");
